src/components/Navbar/Navbar.module.css
.Navbar {
    position: fixed;
    width: 100vw;
    height: 100px;
    top: 0;
    left: 0;
    z-index: 10;
    transition: background-color 200ms ease, height 200ms ease;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.Logo {
    position: relative;
    margin: 0 0 0 14vw;
    width: 120px;
    transition: width 0.2s ease, transform 0.2s ease;
}

.LogoLink {
    text-decoration: none;
    color: inherit;
}

.NavList {
    margin: 0;
    list-style: none;
    padding-inline-start: 0;
    width: calc(300px + 10vw);
    display: flex;
    justify-content: space-evenly;
    margin: 0 5vw 0 0;
}

.NavListItem {
    display: inline-block;
}

.NavLink {
    color: inherit;
    text-decoration: none;
}

.ActiveLink {
    color: #0066FF;
    font-weight: 700;
}

@media (max-width: 788px) {
    .NavList {
        display: none;
    }

    .Logo {
        margin: 0;
    }

    .Navbar {
        justify-content: center;
    }
}

